# rust-khutulun

./: Cargo.toml  Cargo.toml.x  FAQ.md  README.md  TODO
assets/wit/: clout-plugins.wit
crates/clout/: Cargo.toml
crates/clout/src/: lib.rs
crates/clout/src/clout/: call.rs  clout.rs  errors.rs  expression.rs  mod.rs
crates/clout/src/clout/entities/: debug.rs  event_handler.rs  id.rs  instance.rs  metadata.rs  mod.rs  node.rs  node_template.rs  property.rs  relationship.rs  relationship_template.rs  template.rs  type.rs
crates/clout/src/clout/store/: errors.rs  in_memory.rs  mod.rs  store.rs
crates/clout/src/plugins/: bindings.rs  environment.rs  errors.rs  library.rs  mod.rs
crates/clout/src/plugins/functions/: mod.rs  normal.rs  plugin.rs
crates/clout/src/plugins/host/: host.rs  list.rs  map.rs  mod.rs  normal.rs  value.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: bindings.rs  lib.rs
crates/sdk/src/host/: mod.rs  value.rs  wrappers.rs
crates/sdk/src/macros/: literal.rs  mod.rs  traversal.rs
crates/sdk/src/normal/: list.rs  map.rs  mod.rs  value.rs
